# Ray-tracer-engine-

./: .editorconfig  .gitignore  README.md
raytracer/: CMakeLists.txt  ply_parser.cpp  raytracer.cpp
raytracer/acceleration/: Accelerator.cpp  Accelerator.hpp
raytracer/cameras/: Parallel.cpp  Perspective.cpp
raytracer/geometry/: Geometry.cpp  Plane.cpp  Sphere.cpp  Triangle.cpp
raytracer/lenses/: Lens.cpp  Lens.hpp
raytracer/lights/: Light.cpp  Light.hpp
raytracer/materials/: Cosine.cpp  Cosine.hpp  Glossy.cpp  Glossy.hpp  Material.hpp  Matte.cpp  Matte.hpp  Wall.cpp  Wall.hpp
raytracer/samplers/: Sampler.cpp  Sampler.hpp  Simple.cpp  Simple.hpp
raytracer/utilities/: BBox.cpp  BBox.hpp  Constants.hpp  FileParser.cpp  FileParser.h  FileReader.cpp  FileReader.h  Image.cpp  Image.hpp  Point3D.cpp  RGBColor.cpp  RGBColor.hpp  Ray.cpp  Ray.hpp  ShadeInfo.cpp  SimulationParameters.hpp  Utils.cpp  Utils.h  Vector3D.cpp  helpers.cpp  helpers.hpp
raytracer/world/: ViewPlane.cpp  World.cpp  World.hpp
